--- a/appspec.yaml
+++ b/appspec.yaml
@@ -3,8 +3,8 @@ Resources:
   - TargetService:
       Type: AWS::ECS::Service
       Properties:
-        TaskDefinition: "arn:aws:ecs:ap-south-1:176275544602:task-definition/cts-pms-login-td:1"
+        TaskDefinition: "arn:aws:ecs:ap-south-1:176275544602:task-definition/test-login-td:1"
         LoadBalancerInfo:
-          ContainerName: "cts-pms-login-container"
+          ContainerName: "test-login-container"
           ContainerPort: "9003"
         PlatformVersion: "LATEST"
